--- a/MennuDesplegableDemo/MVVM/View/MainPage.xaml
+++ b/MennuDesplegableDemo/MVVM/View/MainPage.xaml
@@ -8,6 +8,7 @@
     <FlyoutPage.BindingContext>
         <vm:MenuViewModel />
     </FlyoutPage.BindingContext>
+
     <FlyoutPage.Flyout>
         <ContentPage
             Title="Menú">
@@ -22,201 +23,158 @@
                         Height="Auto" />
                     <RowDefinition
                         Height="Auto" />
-                    <RowDefinition
-                        Height="Auto" />
-                    <RowDefinition
-                        Height="1" />
-                    <RowDefinition
-                        Height="Auto" />
-                    <RowDefinition
-                        Height="Auto" />
-                    <RowDefinition
-                        Height="Auto" />
-                    <RowDefinition
-                        Height="auto" />
-                    <RowDefinition
-                        Height="1" />
-                    <RowDefinition
-                        Height="Auto" />
-                    <RowDefinition
-                        Height="Auto" />
-                    <RowDefinition
-                        Height="auto" />
                 </Grid.RowDefinitions>
-                <Grid.ColumnDefinitions>
-                    <ColumnDefinition
-                        Width="*" />
-                </Grid.ColumnDefinitions>
-                <!--  Imagen circular  -->
-                <Image
+
+                <!--  StackLayout 0: Imagen circular, nombre, correo, y editar  -->
+                <StackLayout
                     Grid.Row="0"
                     HorizontalOptions="Center"
-                    VerticalOptions="Center"
-                    Aspect="AspectFill"
-                    HeightRequest="100"
-                    Source="dotnet_dog.png"
-                    WidthRequest="100">
-                    <Image.Clip>
-                        <EllipseGeometry
-                            Center="50,50"
-                            RadiusX="50"
-                            RadiusY="50" />
-                    </Image.Clip>
-                </Image>
-                <!--  Nombre  -->
-                <Label
+                    VerticalOptions="Center">
+                    <Image
+                        Aspect="AspectFill"
+                        HeightRequest="100"
+                        Source="dotnet_dog.png"
+                        WidthRequest="100">
+                        <Image.Clip>
+                            <EllipseGeometry
+                                Center="50,50"
+                                RadiusX="50"
+                                RadiusY="50" />
+                        </Image.Clip>
+                    </Image>
+                    <Label
+                        Text="Andrea Osorio Pineda"
+                        Style="{StaticResource LabelStyle}"
+                        FontSize="18" />
+                    <Label
+                        Text="Andrea9@hotmail.com"
+                        Style="{StaticResource LabelStyle}"
+                        FontSize="14" />
+                    <Image
+                        HorizontalOptions="Center"
+                        Source="edit_profile"
+                        WidthRequest="40" />
+                </StackLayout>
+
+                <!--  División  -->
+                <BoxView
                     Grid.Row="1"
-                    Text="Andrea Osorio Pineda"
-                    TextColor="White"
-                    HorizontalOptions="Center"
-                    VerticalOptions="Center"
-                    FontSize="18" />
-                <!--  Correo  -->
-                <Label
+                    HeightRequest="1"
+                    Color="Black" />
+
+                <!--  StackLayout 1: Botones del menú  -->
+                <StackLayout
+                    Grid.Row="1"
+                    Spacing="10">
+                    <StackLayout
+                        Orientation="Horizontal">
+                        <Image
+                            Source="files"
+                            WidthRequest="40" />
+                        <Label
+                            Text="Expedientes"
+                            Style="{StaticResource LabelStyle}">
+                            <Label.GestureRecognizers>
+                                <TapGestureRecognizer
+                                    Tapped="TapGestureRecognizer_Tapped" />
+                            </Label.GestureRecognizers>
+                        </Label>
+                    </StackLayout>
+
+                    <StackLayout
+                        Orientation="Horizontal">
+                        <Image
+                            Source="change_password"
+                            WidthRequest="40" />
+                        <Label
+                            Text="Cambiar Contraseña"
+                            Style="{StaticResource LabelStyle}">
+                            <Label.GestureRecognizers>
+                                <TapGestureRecognizer
+                                    Tapped="TapGestureRecognizer_Tapped" />
+                            </Label.GestureRecognizers>
+                        </Label>
+                    </StackLayout>
+
+                    <StackLayout
+                        Orientation="Horizontal">
+                        <Image
+                            Source="about"
+                            WidthRequest="40" />
+                        <Label
+                            Text="Acerca de"
+                            Style="{StaticResource LabelStyle}">
+                            <Label.GestureRecognizers>
+                                <TapGestureRecognizer
+                                    Tapped="TapGestureRecognizer_Tapped" />
+                            </Label.GestureRecognizers>
+                        </Label>
+                    </StackLayout>
+
+                    <StackLayout
+                        Orientation="Horizontal">
+                        <Image
+                            Source="logout"
+                            WidthRequest="40" />
+                        <Label
+                            Text="Cerrar sesión"
+                            Style="{StaticResource LabelStyle}">
+                            <Label.GestureRecognizers>
+                                <TapGestureRecognizer
+                                    Tapped="TapGestureRecognizer_Tapped" />
+                            </Label.GestureRecognizers>
+                        </Label>
+                    </StackLayout>
+                </StackLayout>
+
+                <!--  División  -->
+                <BoxView
                     Grid.Row="2"
-                    Text="Andrea9@hotmail.com"
-                    TextColor="White"
-                    HorizontalOptions="Center"
-                    VerticalOptions="Center"
-                    FontSize="14" />
-                <!--  Editar  -->
-                <Image
-                    Grid.Row="3"
-                    HorizontalOptions="Center"
-                    VerticalOptions="Center"
-                    Source="boligrafo.png"
-                    WidthRequest="40" />
-
-                <!--  División  -->
-                <BoxView
-                    Grid.Row="4"
                     HeightRequest="1"
                     Color="Black" />
 
-                <!--  Botones del menú  -->
-                <Image
-                    Grid.Row="5"
-                    HorizontalOptions="Start"
-                    VerticalOptions="Center"
-                    Source="carpetavacia.png"
-                    WidthRequest="40" />
-                <Label
-                    Grid.Row="5"
-                    Text="Expedientes"
-                    TextColor="White"
-                    Margin="55,0,0,0"
-                    VerticalOptions="End">
-                    <Label.GestureRecognizers>
-                        <TapGestureRecognizer
-                            NumberOfTapsRequired="1"
-                            Tapped="TapGestureRecognizer_Tapped" />
-                    </Label.GestureRecognizers>
-                </Label>
-                <Image
-                    Grid.Row="6"
-                    HorizontalOptions="Start"
-                    VerticalOptions="Center"
-                    Source="contrasena.png"
-                    WidthRequest="40" />
-                <Label
-                    Grid.Row="6"
-                    Text="Cambiar Contraseña"
-                    TextColor="White"
-                    Margin="55,0,0,0"
-                    VerticalOptions="End">
-                    <Label.GestureRecognizers>
-                        <TapGestureRecognizer
-                            NumberOfTapsRequired="1"
-                            
-                            Tapped="TapGestureRecognizer_Tapped" />
-                    </Label.GestureRecognizers>
-                </Label>
-                <Image
-                    Grid.Row="7"
-                    HorizontalOptions="Start"
-                    VerticalOptions="Center"
-                    Source="informacion.png"
-                    WidthRequest="40" />
-                <Label
-                    Grid.Row="7"
-                    Text="Acerca de"
-                    TextColor="White"
-                    Margin="55,0,0,0"
-                    VerticalOptions="End">
-                    <Label.GestureRecognizers>
-                        <TapGestureRecognizer
-                            NumberOfTapsRequired="1"
-                            Tapped="TapGestureRecognizer_Tapped" />
-                    </Label.GestureRecognizers>
-                </Label>
-                <Image
-                    Grid.Row="8"
-                    HorizontalOptions="Start"
-                    VerticalOptions="Center"
-                    Source="cerrarsesion.png"
-                    WidthRequest="40" />
-                <Label
-                    Grid.Row="8"
-                    Text="Cerrar sesion"
-                    TextColor="White"
-                    Margin="55,0,0,0"
-                    VerticalOptions="End">
-                    <Label.GestureRecognizers>
-                        <TapGestureRecognizer
-                            NumberOfTapsRequired="1"
-                            Tapped="TapGestureRecognizer_Tapped" />
-                    </Label.GestureRecognizers>
-                </Label>
+                <!--  StackLayout 2: Sección de almacenamiento  -->
+                <StackLayout
+                    Grid.Row="2"
+                    Spacing="10">
+                    <Label
+                        Text="Almacenamiento Actual"
+                        TextColor="White"
+                        FontAttributes="Bold" />
+                    <StackLayout
+                        Orientation="Horizontal">
+                        <Image
+                            Source="actual_file"
+                            WidthRequest="40" />
+                        <Label
+                            Text="1 de 3 Expedientes"
+                            Style="{StaticResource LabelStyle}">
+                            <Label.GestureRecognizers>
+                                <TapGestureRecognizer
+                                    Tapped="TapGestureRecognizer_Tapped" />
+                            </Label.GestureRecognizers>
+                        </Label>
+                    </StackLayout>
 
-                <!--  División  -->
-                <BoxView
-                    Grid.Row="9"
-                    HeightRequest="1"
-                    Color="Black" />
-
-                <!--  Sección de almacenamiento  -->
-                <Label
-                    Grid.Row="10"
-                    Text="Almacenamiento Actual"
-                    TextColor="White"
-                    FontAttributes="Bold" />
-                <Image
-                    Grid.Row="11"
-                    HorizontalOptions="Start"
-                    VerticalOptions="Center"
-                    Source="carpetavacia.png"
-                    WidthRequest="40" />
-                <Label
-                    Grid.Row="11"
-                    Text="1 de 3 Expedientes"
-                    TextColor="White"
-                    Margin="55,0,0,0"
-                    VerticalOptions="End">
-                    <Label.GestureRecognizers>
-                        <TapGestureRecognizer
-                            Tapped="TapGestureRecognizer_Tapped" />
-                    </Label.GestureRecognizers>
-                </Label>
-                <Image
-                    Grid.Row="12"
-                    HorizontalOptions="Start"
-                    VerticalOptions="Center"
-                    Source="cerrarsesion.png"
-                    WidthRequest="40" />
-                <Label
-                    Grid.Row="12"
-                    Text="20 de 500MB"
-                    TextColor="White"
-                    Margin="55,0,0,0"
-                    VerticalOptions="End">
-                    <Label.GestureRecognizers>
-                        <TapGestureRecognizer
-                            Tapped="TapGestureRecognizer_Tapped" />
-                    </Label.GestureRecognizers>
-                </Label>
+                    <StackLayout
+                        Orientation="Horizontal">
+                        <Image
+                            Source="use_file"
+                            WidthRequest="40" />
+                        <Label
+                            Text="20 de 500MB"
+                            Style="{StaticResource LabelStyle}">
+                            <Label.GestureRecognizers>
+                                <TapGestureRecognizer
+                                    Tapped="TapGestureRecognizer_Tapped" />
+                            </Label.GestureRecognizers>
+                        </Label>
+                    </StackLayout>
+                </StackLayout>
             </Grid>
         </ContentPage>
     </FlyoutPage.Flyout>
+
     <FlyoutPage.Detail>
         <NavigationPage>
             <x:Arguments>
@@ -233,5 +191,4 @@
             </x:Arguments>
         </NavigationPage>
     </FlyoutPage.Detail>
-
 </FlyoutPage>
