--- a/MennuDesplegableDemo/MVVM/View/MainPage.xaml
+++ b/MennuDesplegableDemo/MVVM/View/MainPage.xaml
@@ -4,17 +4,15 @@
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:vm="clr-namespace:MennuDesplegableDemo.MVVM.ViewModels">
-
     <FlyoutPage.BindingContext>
         <vm:MenuViewModel />
     </FlyoutPage.BindingContext>
-
     <FlyoutPage.Flyout>
         <ContentPage
             Title="Menú">
             <Grid
                 Padding="20"
-                BackgroundColor="#4C657E"
+                BackgroundColor="#33333F"
                 RowSpacing="10">
                 <Grid.RowDefinitions>
                     <RowDefinition
@@ -24,12 +22,12 @@
                     <RowDefinition
                         Height="Auto" />
                 </Grid.RowDefinitions>
-
                 <!--  StackLayout 0: Imagen circular, nombre, correo, y editar  -->
                 <StackLayout
                     Grid.Row="0"
                     HorizontalOptions="Center"
-                    VerticalOptions="Center">
+                    VerticalOptions="Center"
+                    Spacing="5">
                     <Image
                         Aspect="AspectFill"
                         HeightRequest="100"
@@ -45,32 +43,33 @@
                     <Label
                         Text="Andrea Osorio Pineda"
                         Style="{StaticResource LabelStyle}"
+                        HorizontalOptions="Center"
                         FontSize="18" />
                     <Label
                         Text="Andrea9@hotmail.com"
                         Style="{StaticResource LabelStyle}"
+                        HorizontalOptions="Center"
                         FontSize="14" />
                     <Image
                         HorizontalOptions="Center"
                         Source="edit_profile"
-                        WidthRequest="40" />
+                        WidthRequest="30" />
                 </StackLayout>
-
                 <!--  División  -->
                 <BoxView
                     Grid.Row="1"
-                    HeightRequest="1"
-                    Color="Black" />
-
+                    Style="{StaticResource BoxStyle}" />
                 <!--  StackLayout 1: Botones del menú  -->
                 <StackLayout
                     Grid.Row="1"
-                    Spacing="10">
+                    Margin="0,20"
+                    Spacing="20">
                     <StackLayout
-                        Orientation="Horizontal">
+                        Grid.Row="1"
+                        Style="{StaticResource HorizontalStyle}">
                         <Image
                             Source="files"
-                            WidthRequest="40" />
+                            WidthRequest="30" />
                         <Label
                             Text="Expedientes"
                             Style="{StaticResource LabelStyle}">
@@ -80,12 +79,11 @@
                             </Label.GestureRecognizers>
                         </Label>
                     </StackLayout>
-
                     <StackLayout
-                        Orientation="Horizontal">
+                        Style="{StaticResource HorizontalStyle}">
                         <Image
                             Source="change_password"
-                            WidthRequest="40" />
+                            WidthRequest="30" />
                         <Label
                             Text="Cambiar Contraseña"
                             Style="{StaticResource LabelStyle}">
@@ -95,12 +93,11 @@
                             </Label.GestureRecognizers>
                         </Label>
                     </StackLayout>
-
                     <StackLayout
-                        Orientation="Horizontal">
+                        Style="{StaticResource HorizontalStyle}">
                         <Image
                             Source="about"
-                            WidthRequest="40" />
+                            WidthRequest="30" />
                         <Label
                             Text="Acerca de"
                             Style="{StaticResource LabelStyle}">
@@ -110,12 +107,11 @@
                             </Label.GestureRecognizers>
                         </Label>
                     </StackLayout>
-
                     <StackLayout
-                        Orientation="Horizontal">
+                        Style="{StaticResource HorizontalStyle}">
                         <Image
                             Source="logout"
-                            WidthRequest="40" />
+                            WidthRequest="30" />
                         <Label
                             Text="Cerrar sesión"
                             Style="{StaticResource LabelStyle}">
@@ -130,22 +126,21 @@
                 <!--  División  -->
                 <BoxView
                     Grid.Row="2"
-                    HeightRequest="1"
-                    Color="Black" />
-
+                    Style="{StaticResource BoxStyle}" />
                 <!--  StackLayout 2: Sección de almacenamiento  -->
                 <StackLayout
                     Grid.Row="2"
-                    Spacing="10">
+                    Margin="0,20"
+                    Spacing="20">
                     <Label
                         Text="Almacenamiento Actual"
                         TextColor="White"
                         FontAttributes="Bold" />
                     <StackLayout
-                        Orientation="Horizontal">
+                        Style="{StaticResource HorizontalStyle}">
                         <Image
                             Source="actual_file"
-                            WidthRequest="40" />
+                            WidthRequest="30" />
                         <Label
                             Text="1 de 3 Expedientes"
                             Style="{StaticResource LabelStyle}">
@@ -155,12 +150,11 @@
                             </Label.GestureRecognizers>
                         </Label>
                     </StackLayout>
-
                     <StackLayout
-                        Orientation="Horizontal">
+                        Style="{StaticResource HorizontalStyle}">
                         <Image
                             Source="use_file"
-                            WidthRequest="40" />
+                            WidthRequest="30" />
                         <Label
                             Text="20 de 500MB"
                             Style="{StaticResource LabelStyle}">
@@ -174,7 +168,6 @@
             </Grid>
         </ContentPage>
     </FlyoutPage.Flyout>
-
     <FlyoutPage.Detail>
         <NavigationPage>
             <x:Arguments>
